spec/fixtures/validation/invalid_syntax_test/invalid_syntax_connector.rb
{
  title: 'Test Connector',
  connection: {
    fields: [{ name: 'api_key' }]
  # Missing closing brace - syntax error